Add canal-codigos property and update datasource configurations for production and QA environments